# Assteroids

./: .clangd  CMakeLists.txt  README.md  package-lock.json  package.json
assets/ui/: global.css  global.css.map
assets/ui/HUD/: HUD.css  HUD.css.map  HUD.html
assets/ui/MainMenu/: MainMenu.css  MainMenu.css.map  MainMenu.html
assets/ui/samples/: index.html
assets/ui/scripts/HUD/: HUD.js
assets/ui/scripts/MainMenu/: MainMenu.js
assets/ui/scripts/ui/MainMenu/: MainMenu.js
scripts/: dev.sh
scss/ui/: global.scss
scss/ui/HUD/: HUD.scss
src/: main.cpp
src/Behaviours/Asteroid/: Asteroid.cpp  Asteroid.h
src/Behaviours/Bullet/: Bullet.cpp  Bullet.h
src/Behaviours/GameManager/: GameManager.cpp  GameManager.h
src/Behaviours/MainMenuController/: MainMenuController.cpp  MainMenuController.h
src/Behaviours/PlayerController/: PlayerController.cpp  PlayerController.h
src/Behaviours/Teleporter/: Teleporter.cpp  Teleporter.h
src/Data/Stats/: Stats.cpp  Stats.h
src/Scenes/GameScene/: GameScene.cpp  GameScene.h
src/Scenes/MainMenu/: MainMenu.cpp  MainMenu.h
src/Scenes/SampleScene/: SampleScene.cpp  SampleScene.h
ts/HUD/: HUD.ts
ts/MainMenu/: MainMenu.ts
ts/ui/MainMenu/: MainMenu.ts
